add signUp and form validation

--- a/views/partials/user/footer.hbs
+++ b/views/partials/user/footer.hbs
@@ -116,8 +116,8 @@
           <input id="passPopup" type="password" class="w-full border px-3 py-2 rounded" placeholder="Password" />
         </div>
         <div class="flex gap-2">
-          <button class="flex-1 bg-orange-500 text-white px-4 py-2 rounded">Login →</button>
-          <button type="button" class="flex-1 border px-4 py-2 rounded">Create Account</button>
+        <a href="/login"class="flex-1 border bg-orange-500 text-white px-4 py-3 rounded block text-center">  Login </a>
+        <a href="/signup"class="flex-1 border px-4 py-3 rounded block text-center">Create Account</a>
         </div>
       </form>
     </div>
