Google Single Sign Up using Passport OAuth20

--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -327,13 +327,13 @@
               </div>
 
               <!-- Social Buttons -->
-              <button
-                type="button"
+              <a
+                href="/auth/google"
                 class="flex w-full items-center justify-center gap-2 rounded border border-slate-200 py-2 text-sm text-slate-700 hover:bg-slate-50"
               >
                 <span class="text-base">G</span>
-                <span>Sign up with Google</span>
-              </button>
+                <span>Sig up with Google</span>
+              </a>
 
               <button
                 type="button"
