--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -292,6 +292,13 @@
                 <div id="error5" class="error-message"></div>
               </div>
 
+              {{#if message}}
+                   <div class="bg-red-100 text-red-700 text-center px-4 py-2 rounded mb-4">
+                     {{message}}
+                   </div>
+              {{/if}}
+
+
               <!-- Terms -->
               <div class="flex items-start gap-2 pt-1">
                 <input
