--- a/views/partials/admin/footer.hbs
+++ b/views/partials/admin/footer.hbs
@@ -1,4 +1,4 @@
-</main>
+{{!-- </main>
 <script src="/admin-assets/js/vendors/jquery-3.6.0.min.js"></script>
 <script src="/admin-assets/js/vendors/bootstrap.bundle.min.js"></script>
 <script src="/admin-assets/js/vendors/select2.min.js"></script>
@@ -9,4 +9,4 @@
 <script src="/admin-assets/js/custom-chart.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
-</html>
+</html> --}}
